aesthetic updates and addition of various functionality

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,3 +56,9 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 #Added by Nicholas Vaidyanathan
 application.description=Welcome to the Arizona State University Engineering Education Research Database. This portal holds data that we've collected from analyzing courses and publications from programs around the country related to engineering
+topnav.home=Home
+topnav.presentations=Presentations
+topnav.faculty=Program Faculty
+topnav.students=Students
+topnav.courses=Courses
+topnav.projects=Research Projects
