presentation display done

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -62,3 +62,5 @@ topnav.faculty=Program Faculty
 topnav.students=Students
 topnav.courses=Courses
 topnav.projects=Research Projects
+presentations.seminars={0} Seminar Series
+seminar.dateformat=EEEE, MMMM dd, yyyy, h:mm a z
